# Chronica-Regna-Fractorum

./: .gitignore  .gitmodules  Installing Dependencies.md  README.md
Code/: CMakeLists.txt
Code/headers/: obj_sdlr.h  vertex.h
Code/include/glfw/: glfw3.h
Code/shaders/: shader.vert
Code/src/: main.cpp  obj_sdlr.cpp
